add TRYX control register to enable SVM

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -10,7 +10,7 @@ axi/axi2per:
   commit: tags/pulp-v1.0
   group:  pulp-platform
 axi/per2axi:
-  commit: tags/pulp-v1.0
+  commit: 0f6e2570fa7119875ad5ee55cce67038fa6d23e7
   group:  pulp-platform
 axi/axi_size_conv:
   commit: tags/pulp-v1.0
