--- a/ips_list.yml
+++ b/ips_list.yml
@@ -7,7 +7,7 @@ axi/axi2mem:
   commit: tags/pulp-v1.0
   group:  pulp-platform
 axi/axi2per:
-  commit: tags/pulp-v1.0
+  commit: f284066827e91b1c10f7e2e28eca969cc8844d77
   group:  pulp-platform
 axi/per2axi:
   commit: 0f6e2570fa7119875ad5ee55cce67038fa6d23e7
