ips_list: Switch to atomics-enabled variant of `cluster_interconnect`

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -13,8 +13,9 @@ axi/per2axi:
   commit: 0f6e2570fa7119875ad5ee55cce67038fa6d23e7
   group:  pulp-platform
 cluster_interconnect:
-  commit: tags/pulp-v1.0
-  group: pulp-platform
+  commit: atomics-v0.1.0
+  server: git@iis-git.ee.ethz.ch
+  group:  akurth
 event_unit_flex:
   commit: tags/pulp-v1.0
   group: pulp-platform
