added icache_private to ips_list

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -30,6 +30,9 @@ icache-intc:
 icache_mp_128_pf:
   commit: tags/pulp-v1.0
   group: pulp-platform
+icache_private:
+  commit: master
+  group: pulp-platform
 cluster_peripherals:
   commit: aa58c62d9c7ca1866311ba67e539ef9e527a268e
   group:  pulp-platform
