--- a/ips_list.yml
+++ b/ips_list.yml
@@ -37,6 +37,6 @@ cluster_peripherals:
   commit: aa58c62d9c7ca1866311ba67e539ef9e527a268e
   group:  pulp-platform
 apu_cluster:
-  commit: fpnew_integration
+  commit: master
   group: pulp-platform
 
