--- a/ips_list.yml
+++ b/ips_list.yml
@@ -39,4 +39,6 @@ cluster_peripherals:
 apu_cluster:
   commit: fpu_integration
   group: pulp-platform
-
+fpnew:
+  commit: tags/vega_1.0.2
+  group: pulp-platform
