--- a/ips_list.yml
+++ b/ips_list.yml
@@ -37,7 +37,7 @@ cluster_peripherals:
   commit: aa58c62d9c7ca1866311ba67e539ef9e527a268e
   group:  pulp-platform
 apu_cluster:
-  commit: fpu_integration
+  commit: fpnew_integration
   group: pulp-platform
 fpnew:
   commit: tags/vega_1.0.2
