--- a/ips_list.yml
+++ b/ips_list.yml
@@ -36,6 +36,9 @@ icache_private:
 cluster_peripherals:
   commit: aa58c62d9c7ca1866311ba67e539ef9e527a268e
   group:  pulp-platform
+fpnew:
+  commit: fpnew_integration
+  group: pulp-platform
 apu_cluster:
   commit: fpnew_integration
   group: pulp-platform
