--- a/ips_list.yml
+++ b/ips_list.yml
@@ -37,8 +37,11 @@ cluster_peripherals:
   commit: aa58c62d9c7ca1866311ba67e539ef9e527a268e
   group:  pulp-platform
 fpnew:
-  commit: fpu_integration
+  commit: master
   group: pulp-platform
+fpu_interco
+  commit: master
+  group:pulp-platform
 apu_cluster:
   commit: fpu_integration
   group: pulp-platform
