--- a/src_files.yml
+++ b/src_files.yml
@@ -1,10 +1,12 @@
 pulp_cluster:
+  vlog_opts: [
+    -L fpnew_lib,
+  ]
   incdirs: [
     ../../rtl/includes,
   ]
   files: [
     packages/pulp_cluster_package.sv,
-    packages/apu_package.sv,
     rtl/core_region.sv,
     rtl/core_demux.sv,
     rtl/cluster_interconnect_wrap.sv,
