--- a/Bender.yml
+++ b/Bender.yml
@@ -10,7 +10,7 @@ dependencies:
   axi_slice_dc: { git: "https://github.com/pulp-platform/axi_slice_dc.git", rev: atomics }
   cluster_interconnect: { git: "https://github.com/pulp-platform/cluster_interconnect.git", rev: atomics }
   cluster_peripherals: { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: release-1.0 }
-  event_unit_flex: { git: "https://github.com/pulp-platform/event_unit_flex.git", version: 1.0.0 }
+  event_unit_flex: { git: "https://github.com/pulp-platform/event_unit_flex.git", rev: define-message_bus }
   icache_mp_128_pf: { git: "https://github.com/pulp-platform/icache_mp_128_pf.git", rev: release-1.0 }
   mchan: { git: "https://github.com/pulp-platform/mchan.git", rev: release-1.1 }
   per2axi: { git: "https://github.com/pulp-platform/per2axi.git", rev: atomics }
