--- a/Bender.yml
+++ b/Bender.yml
@@ -11,6 +11,7 @@ dependencies:
   cluster_interconnect: { git: "https://github.com/pulp-platform/cluster_interconnect.git", rev: atomics }
   cluster_peripherals: { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: release-1.0 }
   event_unit_flex: { git: "https://github.com/pulp-platform/event_unit_flex.git", rev: define-message_bus }
+  fpga-support: { git: "https://github.com/pulp-platform/fpga-support.git", rev: release-0.4 }
   icache_mp_128_pf: { git: "https://github.com/pulp-platform/icache_mp_128_pf.git", rev: release-1.0 }
   mchan: { git: "https://github.com/pulp-platform/mchan.git", rev: release-1.1 }
   per2axi: { git: "https://github.com/pulp-platform/per2axi.git", rev: atomics }
