--- a/Bender.yml
+++ b/Bender.yml
@@ -13,7 +13,7 @@ dependencies:
   event_unit_flex: { git: "https://github.com/pulp-platform/event_unit_flex.git", rev: define-message_bus }
   fpga-support: { git: "https://github.com/pulp-platform/fpga-support.git", rev: release-0.4 }
   icache_mp_128_pf: { git: "https://github.com/pulp-platform/icache_mp_128_pf.git", rev: release-1.0 }
-  mchan: { git: "https://github.com/pulp-platform/mchan.git", rev: release-1.1 }
+  mchan: { git: "https://github.com/pulp-platform/mchan.git", rev: atop }
   per2axi: { git: "https://github.com/pulp-platform/per2axi.git", rev: atomics }
   riscv: { git: "https://github.com/pulp-platform/riscv.git", rev: atomics }
   timer_unit: { git: "https://github.com/pulp-platform/timer_unit.git", version: 1.0.0 }
