--- a/ips_list.yml
+++ b/ips_list.yml
@@ -36,3 +36,8 @@ scm:
 timer_unit:
   commit: tags/pulpissimo-v1.0
   group:  pulp-platform
+accelerator:
+  server: git@iis-git.ee.ethz.ch
+  commit: master
+  domain: [cluster]
+  group: sriedel
