Added HWPE MAC engine (toy accelerator) set to be used by default in the cluster

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -33,3 +33,5 @@ icache_mp_128_pf:
 cluster_peripherals:
   commit: aa58c62d9c7ca1866311ba67e539ef9e527a268e
   group:  pulp-platform
+hwpe-mac-engine:
+  commit: f1d0b72
