--- a/src_files.yml
+++ b/src_files.yml
@@ -4,6 +4,7 @@ pulp_cluster:
   ]
   incdirs: [
     ../../rtl/includes,
+    packages,
   ]
   files: [
     packages/pulp_cluster_package.sv,
@@ -26,4 +27,5 @@ pulp_cluster:
     rtl/axi2per_wrap.sv,
     rtl/per2axi_wrap.sv,
     rtl/pulp_cluster.sv,
+    ../pulp_soc/rtl/components/pulp_interfaces.sv,
   ]
