--- a/ips_list.yml
+++ b/ips_list.yml
@@ -55,5 +55,10 @@ fpu_interco:
   commit: tags/v1.2.4
   domain: [soc, cluster]
   group: pulp-platform
+riscv_nn:
+  commit: marsellus_v2.4.0
+  domain: [cluster]
+  group: pulp-restricted
+  server: git@iis-git.ee.ethz.ch
 
 
