--- a/ips_list.yml
+++ b/ips_list.yml
@@ -52,7 +52,7 @@ cluster_peripherals:
   domain: [cluster]
   group:  pulp-platform
 fpu_interco:
-  commit: tags/v1.2.4
+  commit: 40ed323ca72ecd40deb1ef8eb1a3d5b074925c05
   domain: [soc, cluster]
   group: pulp-platform
 riscv_nn:
