src_files.yml: add missing apu_package.sv

--- a/src_files.yml
+++ b/src_files.yml
@@ -6,6 +6,7 @@ pulp_cluster:
     ../../rtl/includes,
   ]
   files: [
+    packages/apu_package.sv,
     packages/pulp_cluster_package.sv,
     rtl/core_region.sv,
     rtl/core_demux.sv,
