--- a/ips_list.yml
+++ b/ips_list.yml
@@ -21,7 +21,7 @@ axi/axi_size_conv:
   group: pulp-platform
 axi/axi:
   commit: tags/v0.23.0
-  domain: [soc]
+  domain: [soc, cluster]
   group: pulp-platform 
 cluster_interconnect:
   commit: tags/v1.0.3
