--- a/ips_list.yml
+++ b/ips_list.yml
@@ -56,7 +56,7 @@ fpu_interco:
   domain: [soc, cluster]
   group: pulp-platform
 riscv_nn:
-  commit: marsellus_v2.5.1
+  commit: mac_loadv3
   domain: [cluster]
   group: pulp-restricted
   server: git@iis-git.ee.ethz.ch
