--- a/Bender.yml
+++ b/Bender.yml
@@ -14,22 +14,22 @@ dependencies:
   cluster_interconnect: { git: "git@github.com:pulp-platform/cluster_interconnect.git", version: 1.1.0 }
   event_unit_flex:      { git: "git@github.com:pulp-platform/event_unit_flex.git", rev: "1.4.1" }
   mchan:                { git: "git@github.com:pulp-platform/mchan.git", version: 1.2.2 }
-  hier-icache:          { git: "git@github.com:micprog/hier-icache.git", rev: "936b4f80cc7802c7e304d0943f4bb0665142a75a" } # To be updated with pulp-platform dependency
-  icache_mp_128_pf:     { git: "git@github.com:pulp-platform/icache_mp_128_pf.git", rev: "f012d071b909881167b44d2945a1e31c0c39eea3"}
+  hier-icache:          { git: "git@github.com:pulp-platform/hier-icache.git", version: 1.2.0 }
+  icache_mp_128_pf:     { git: "git@github.com:micprog/icache_mp_128_pf.git", rev: "ab4255c6874c1e2623ff2ca29cd89bf0f99309a8" }
   icache_private:       { git: "git@github.com:pulp-platform/icache_private.git", rev: "1d4cdbcbec3ab454c09d378fc55631b60450fccd" }
-  cluster_peripherals:  { git: "git@github.com:pulp-platform/cluster_peripherals.git", rev: "a25ead57d5dbaad456fa3ceb9e9aba0a969e0c86"} # {path: "../cluster_peripherals"}
-  fpu_interco:          { git: "git@github.com:micprog/fpu_interco.git", rev: "9020b108ff5fb0ebd23e22aaea5a1f266e1c8c6f" } # To be updated with pulp-platform dependency
-  axi:                  { git: "git@github.com:pulp-platform/axi.git", version: 0.7.1 } # really old (now 0.24?)
+  cluster_peripherals:  { git: "git@github.com:pulp-platform/cluster_peripherals.git", version: 2.0.0 }
+  fpu_interco:          { git: "git@github.com:pulp-platform/fpu_interco.git", rev: "83c7a1b690bffd006d8b925805aab3c1f8ba9ff1" }
+  axi:                  { git: "git@github.com:pulp-platform/axi.git", version: 0.7.1 } # to be updated (now 0.24?)
   axi_node:             { git: "git@github.com:pulp-platform/axi_node.git", version: 1.1.4 } # deprecated, replaced by axi_xbar (in axi repo)
   axi_slice:            { git: "git@github.com:pulp-platform/axi_slice.git", version: 1.1.4 } # deprecated, replaced by axi_cut (in axi repo)
   axi_slice_dc:         { git: "git@github.com:pulp-platform/axi_slice_dc.git", version: 1.1.3 } # deprecated, replaced by axi_cdc (in axi repo)
   timer_unit:           { git: "git@github.com:pulp-platform/timer_unit.git", version: 1.0.2 }
   common_cells:         { git: "git@github.com:pulp-platform/common_cells.git", version: 1.13.1 }
-  tech_cells_generic:   { git: "git@github.com:pulp-platform/tech_cells_generic.git", version: 0.1.6 }
-  riscv:                { git: "git@github.com:micprog/cv32e40p.git", rev: "29a838f6e2811b12220cb13bb02b37bd8ccd012f" } # { git: "git@github.com:pulp-platform/riscv.git", rev: "pulpissimo-v3.4.0" } # To be updated to CV32E40P? # To be updated with pulp-platform dependency
-  ibex:                 {path: "../ibex"} #{ git: "git@github.com:micprog/ibex", rev: "5480f422d8cd349fa5e3cc7c8a6bd2d7c7197bde" } # To be updated with lowrisc dependency
+  tech_cells_generic:   { git: "git@github.com:pulp-platform/tech_cells_generic.git", version: 0.2.2 }
+  riscv:                { git: "git@github.com:micprog/cv32e40p.git", rev: "pulpissimo-v3.4.1"} # To be updated to openhwgroup repository
+  ibex:                 { git: "git@github.com:lowRISC/ibex.git", rev: "aa320957eb34d02dc819db9dc7fa64b036b9b852" }
   scm:                  { git: "git@github.com:pulp-platform/scm.git", version: 1.0.1}
-  hwpe-mac-engine:      { git: "git@github.com:micprog/hwpe-mac-engine.git", rev: "d9a60d8ffee398c8d2c9745dcbec12fc7d29a008" } # To be updated with pulp-platform dependency
+  hwpe-mac-engine:      { git: "git@github.com:micprog/hwpe-mac-engine.git", rev: "v1.2-bender" } # To be updated with pulp-platform dependency
   # apu_cluster ?
   # sp_icache ?
 
@@ -58,6 +58,13 @@ sources:
   - rtl/cluster_peripherals.sv
   - rtl/core_demux.sv
     # Level 2
-  - rtl/core_region.sv
+  - target: rtl
+    defines:
+      TRACE_EXECUTION: ~
+    files:
+      - rtl/core_region.sv
+  - target: not(rtl)
+    files:
+      - rtl/core_region.sv
     # Level 3
   - rtl/pulp_cluster.sv
