--- a/src_files.yml
+++ b/src_files.yml
@@ -14,7 +14,7 @@ pulp_cluster:
     rtl/core_demux.sv,
     rtl/cluster_interconnect_wrap.sv,
     rtl/tcdm_banks_wrap.sv,
-    rtl/periph_demux.sv,
+    # rtl/periph_demux.sv,
     rtl/per_demux_wrap.sv,
     rtl/periph_FIFO.sv,
     rtl/cluster_peripherals.sv,
