--- a/Bender.yml
+++ b/Bender.yml
@@ -39,7 +39,7 @@ sources:
   - packages/pulp_cluster_package.sv
   - rtl/axi2mem_wrap.sv
   - rtl/axi2per_wrap.sv
-  - rtl/axi_slice_wrap.sv
+  # - rtl/axi_slice_wrap.sv
   - rtl/cluster_bus_wrap.sv
   - rtl/cluster_clock_gate.sv
   - rtl/cluster_event_map.sv
