Fix missing axi_node dependency for ips_list.yml

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -11,6 +11,9 @@ axi/axi2per:
   commit: tags/v1.0.1
   domain: [cluster]
   group:  pulp-platform
+axi/axi_node:
+  commit: v1.1.4
+  domain: [cluster, soc]
 axi/per2axi:
   commit: v1.0.4
   domain: [soc, cluster]
