--- a/Bender.yml
+++ b/Bender.yml
@@ -19,12 +19,11 @@ dependencies:
   icache_private:       { git: "git@github.com:pulp-platform/icache_private.git", rev: "1d4cdbcbec3ab454c09d378fc55631b60450fccd" }
   cluster_peripherals:  { git: "git@github.com:pulp-platform/cluster_peripherals.git", version: 2.0.0 }
   fpu_interco:          { git: "git@github.com:pulp-platform/fpu_interco.git", rev: "83c7a1b690bffd006d8b925805aab3c1f8ba9ff1" }
-  axi:                  { git: "git@github.com:pulp-platform/axi.git", version: 0.7.1 } # to be updated (now 0.24?)
-  axi_node:             { git: "git@github.com:pulp-platform/axi_node.git", version: 1.1.4 } # deprecated, replaced by axi_xbar (in axi repo)
+  axi:                  { git: "git@github.com:pulp-platform/axi.git", version: 0.24.1 } # to be updated (now 0.24?)
   axi_slice:            { git: "git@github.com:pulp-platform/axi_slice.git", version: 1.1.4 } # deprecated, replaced by axi_cut (in axi repo)
   axi_slice_dc:         { git: "git@github.com:pulp-platform/axi_slice_dc.git", version: 1.1.3 } # deprecated, replaced by axi_cdc (in axi repo)
   timer_unit:           { git: "git@github.com:pulp-platform/timer_unit.git", version: 1.0.2 }
-  common_cells:         { git: "git@github.com:pulp-platform/common_cells.git", version: 1.13.1 }
+  common_cells:         { git: "git@github.com:pulp-platform/common_cells.git", version: 1.20.1 }
   tech_cells_generic:   { git: "git@github.com:pulp-platform/tech_cells_generic.git", version: 0.2.2 }
   riscv:                { git: "git@github.com:micprog/cv32e40p.git", rev: "pulpissimo-v3.4.1"} # To be updated to openhwgroup repository
   ibex:                 { git: "git@github.com:lowRISC/ibex.git", rev: "b148f3af51066ac3537c7c6eb4acbc17004bf868" }
@@ -34,6 +33,31 @@ dependencies:
   # sp_icache ?
 
 sources:
+  # Files from deprecated axi_node IP. Remove them after switching to new AXI ips in cluster
+  - include_dirs:
+      - deps_deprecated/axi_node/src
+  - deps_deprecated/axi_node/src/apb_regs_top.sv
+  - deps_deprecated/axi_node/src/axi_address_decoder_AR.sv
+  - deps_deprecated/axi_node/src/axi_address_decoder_AW.sv
+  - deps_deprecated/axi_node/src/axi_address_decoder_BR.sv
+  - deps_deprecated/axi_node/src/axi_address_decoder_BW.sv
+  - deps_deprecated/axi_node/src/axi_address_decoder_DW.sv
+  - deps_deprecated/axi_node/src/axi_AR_allocator.sv
+  - deps_deprecated/axi_node/src/axi_ArbitrationTree.sv
+  - deps_deprecated/axi_node/src/axi_AW_allocator.sv
+  - deps_deprecated/axi_node/src/axi_BR_allocator.sv
+  - deps_deprecated/axi_node/src/axi_BW_allocator.sv
+  - deps_deprecated/axi_node/src/axi_DW_allocator.sv
+  - deps_deprecated/axi_node/src/axi_FanInPrimitive_Req.sv
+  - deps_deprecated/axi_node/src/axi_multiplexer.sv
+  - deps_deprecated/axi_node/src/axi_node.sv
+  - deps_deprecated/axi_node/src/axi_node_intf_wrap.sv
+  - deps_deprecated/axi_node/src/axi_node_wrap_with_slices.sv
+  - deps_deprecated/axi_node/src/axi_regs_top.sv
+  - deps_deprecated/axi_node/src/axi_request_block.sv
+  - deps_deprecated/axi_node/src/axi_response_block.sv
+  - deps_deprecated/axi_node/src/axi_RR_Flag_Req.sv
+  
     # Source files grouped in levels. Files in level 0 have no dependencies on files in this
     # package. Files in level 1 only depend on files in level 0, files in level 2 on files in
     # levels 1 and 0, etc. Files within a level are ordered alphabetically.
