--- a/ips_list.yml
+++ b/ips_list.yml
@@ -52,8 +52,23 @@ cluster_peripherals:
   domain: [cluster]
   group:  pulp-platform
 fpu_interco:
-  commit: 83c7a1b690bffd006d8b925805aab3c1f8ba9ff1
+  commit: be7808b84a1dcdb1ecdb6e40814cc4864acd9451
   domain: [soc, cluster]
   group:  pulp-platform
-
-
+hwpe-ctrl:
+  commit: v1.5
+  group: pulp-platform
+  domain: [soc, cluster, pulp]
+hwpe-stream:
+  commit: a3e3607
+  group: pulp-platform
+  domain: [soc, cluster, pulp]
+hci:
+  commit: v1.0.3
+  group: pulp-platform
+  domain: [cluster, pulp]
+rbe:
+  commit: verification
+  group: pulp-restricted
+  server: git@iis-git.ee.ethz.ch
+  
