--- a/ips_list.yml
+++ b/ips_list.yml
@@ -2,13 +2,15 @@
 # List of IPs and relative branch/commit-hash/tag.
 # Uses the YAML syntax.
 #
-
+common_cells:
+  commit: v1.20.0
+  domain: [cluster, soc]
 axi/axi:
   commit: v0.24.1
   domain: [cluster, soc]
-# axi/axi_node:
-#   commit: v1.1.4
-#   domain: [cluster, soc]
+axi/axi_node:
+   commit: v1.1.4
+   domain: [cluster, soc]
 axi/axi_slice:
   commit: v1.1.4
   domain: [cluster, soc]
