--- a/src_files.yml
+++ b/src_files.yml
@@ -7,8 +7,10 @@ pulp_cluster:
     ../../rtl/includes,
     packages,
     ../axi/axi/include,
+    ../axi/axi/include/axi,
   ]
   files: [
+    ../axi/axi/include/axi/typedef.svh,
     packages/pulp_cluster_package.sv,
     rtl/instr_width_converter.sv,
     rtl/core_region.sv,
