Replaced TCDM_XBAR with tcdm_interconnect

--- a/src_files.yml
+++ b/src_files.yml
@@ -1,7 +1,8 @@
 pulp_cluster:
   vlog_opts: [
     -L fpnew_lib,
-    -L axi_lib
+    -L axi_lib,
+    -L cluster_interconnect_lib,
   ]
   incdirs: [
     ../../rtl/includes,
