Added access to dma_wrap by every core_region through periph demux. XBAR_PER is now bypassed

--- a/Bender.yml
+++ b/Bender.yml
@@ -53,6 +53,7 @@ sources:
   - rtl/per_demux_wrap.sv
   - rtl/periph_FIFO.sv
   - rtl/tcdm_banks_wrap.sv
+  - rtl/periph_demux.sv
     # Level 1
   - rtl/cluster_peripherals.sv
   - rtl/core_demux.sv
