--- a/src_files.yml
+++ b/src_files.yml
@@ -12,6 +12,7 @@ pulp_cluster:
     rtl/instr_width_converter.sv,
     rtl/core_region.sv,
     rtl/core_demux.sv,
+    rtl/periph_demux.sv,
     rtl/cluster_interconnect_wrap.sv,
     rtl/tcdm_banks_wrap.sv,
     rtl/per_demux_wrap.sv,
