--- a/src_files.yml
+++ b/src_files.yml
@@ -22,6 +22,7 @@ pulp_cluster:
     rtl/tcdm_banks_wrap.sv,
     rtl/per_demux_wrap.sv,
     rtl/periph_FIFO.sv,
+    rtl/xbar_pe_wrap.sv,
     rtl/cluster_peripherals.sv,
     rtl/cluster_clock_gate.sv,
     rtl/cluster_timer_wrap.sv,
