pointing to riscv_nn

--- a/ips_list.yml
+++ b/ips_list.yml
@@ -71,5 +71,10 @@ hwpe-datamover-example:
   commit: v1.0
   group: pulp-platform
   domain: [cluster, pulp]
+riscv_nn:
+  commit: master
+  group:  pulp-restricted
+  server: git@iis-git.ee.ethz.ch
+  domain: [cluster, pulp]
 
   
