--- a/ips_list.yml
+++ b/ips_list.yml
@@ -67,7 +67,7 @@ hwpe-stream:
   group: pulp-platform
   domain: [soc, cluster, pulp]
 hci:
-  commit: v1.0.6
+  commit: new_xbar
   group: pulp-platform
   domain: [cluster, pulp]
 cluster_peripherals:
